Fixed summernote text area overspilling on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,3 +108,10 @@ form {
 .page-link {
     color: #181919
 }
+
+/* Responsive Summernote Input Field for smaller screens */
+@media (max-width: 994px) {
+    iframe {
+        width: 80%
+    }
+}
